03. Creating a Basic, Custom Layout

--- a/02. Layout and Fonts/vidpub/index.html
+++ b/02. Layout and Fonts/vidpub/index.html
@@ -2,15 +2,54 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Vidpub</title>
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-  </body>
+  <style>
+    #side-nav {
+      background-color: #000;
+      padding-top: 18px;
+      height: 100%;
+      width:65px;
+      float:left;
+    }
+    #main {
+      float:left;
+      margin-left: 20px;
+      min-width: 500px
+    }
+    #side-nav ul {
+      list-style: none;
+      padding: 20px;
+      margin: 0;
+    }
+    #side-nav li {
+      padding-bottom: 8px;
+    }
+    #wrapper {
+      height: 100%;
+      min-width: 800px;
+    }
+
+  </style>
+<body>
+  <div id="wrapper">
+      <div id="side-nav">
+        <ul style="list-style:none">
+          <li><a href="#"><i class="fa fa-home"></i></a></li>
+          <li><a href="#"><i class="fa fa-list"></i></a></li>
+          <li><a href="#"><i class="fa fa-search"></i></a></li>
+          <li><a href="#"><i class="fa fa-user"></i></a></li>
+        </ul>
+      </div>
+
+      <div id="main">
+        <h1>The World's Leading Video Stuff</h1>
+        <p>From small minds come big ideas.</p>
+      </div>
+  </div>
+</body>
 
   <script>
     // You can also require other files to run in this process
