05. Handlebars View Engine/05_02-Simplest Navigation

--- a/02. Layout and Fonts/vidpub/search.html
+++ b/02. Layout and Fonts/vidpub/search.html
@@ -45,8 +45,7 @@
       </div>
 
       <div id="main">
-        <h1>The World's Leading Video Stuff</h1>
-        <p>From small minds come big ideas.</p>
+        <h1>Search</h1>
       </div>
   </div>
 </body>
