05. Handlebars View Engine / 05_04-The App Event Aggregator

--- a/02. Layout and Fonts/vidpub/index.html
+++ b/02. Layout and Fonts/vidpub/index.html
@@ -5,6 +5,7 @@
     <title>Vidpub</title>
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script> var $ = jQuery = require("jquery")</script>
   </head>
   <style>
     #side-nav {
@@ -37,16 +38,15 @@
   <div id="wrapper">
       <div id="side-nav">
         <ul style="list-style:none">
-          <li><a href="index.html"><i class="fa fa-home"></i></a></li>
+          <li><a href="#" id="home"><i class="fa fa-home"></i></a></li>
           <li><a href="#"><i class="fa fa-list"></i></a></li>
-          <li><a href="search.html"><i class="fa fa-search"></i></a></li>
+          <li><a href="#" id="search"><i class="fa fa-search"></i></a></li>
           <li><a href="#"><i class="fa fa-user"></i></a></li>
         </ul>
       </div>
 
       <div id="main">
-        <h1>The World's Leading Video Stuff</h1>
-        <p>From small minds come big ideas.</p>
+
       </div>
   </div>
 </body>
@@ -54,5 +54,21 @@
   <script>
     // You can also require other files to run in this process
     require('./renderer.js')
+  </script>
+
+  <script>
+    var app = require("./lib/app")
+    app.on("rendered", function(rendered){
+      $("#main").html(rendered)
+    })
+    $(function(){
+      app.emit("view-selected", "home")
+      $("#search").on("click", function(){
+        app.emit("view-selected", "search")
+      })
+      $("#home").on("click", function(){
+        app.emit("view-selected", "home")
+      })
+    })
   </script>
 </html>
