--- a/02. Layout and Fonts/vidpub/index.html
+++ b/02. Layout and Fonts/vidpub/index.html
@@ -38,9 +38,9 @@
   <div id="wrapper">
       <div id="side-nav">
         <ul style="list-style:none">
-          <li><a href="#" id="home"><i class="fa fa-home"></i></a></li>
+          <li><a href="#" id="home" class="nav"><i class="fa fa-home"></i></a></li>
           <li><a href="#"><i class="fa fa-list"></i></a></li>
-          <li><a href="#" id="search"><i class="fa fa-search"></i></a></li>
+          <li><a href="#" id="search" class="nav"><i class="fa fa-search"></i></a></li>
           <li><a href="#"><i class="fa fa-user"></i></a></li>
         </ul>
       </div>
@@ -61,14 +61,15 @@
     app.on("rendered", function(rendered){
       $("#main").html(rendered)
     })
+    var showContent = function(view){
+      app.emit("view-selected", view)
+    }
     $(function(){
-      app.emit("view-selected", "home")
-      $("#search").on("click", function(){
-        app.emit("view-selected", "search")
+        showContent("home")
+        $(".nav").on("click", function(ev){
+          ev.preventDefault()
+          showContent(this.id)
+        })
       })
-      $("#home").on("click", function(){
-        app.emit("view-selected", "home")
-      })
-    })
   </script>
 </html>
