--- a/02. Layout and Fonts/vidpub/index.html
+++ b/02. Layout and Fonts/vidpub/index.html
@@ -39,7 +39,7 @@
       <div id="side-nav">
         <ul style="list-style:none">
           <li><a href="#" id="home" class="nav"><i class="fa fa-home"></i></a></li>
-          <li><a href="#"><i class="fa fa-list"></i></a></li>
+          <li><a href="#" id="chapters" class="nav"><i class="fa fa-list"></i></a></li>
           <li><a href="#" id="search" class="nav"><i class="fa fa-search"></i></a></li>
           <li><a href="#"><i class="fa fa-user"></i></a></li>
         </ul>
@@ -65,7 +65,7 @@
       app.emit("view-selected", view)
     }
     $(function(){
-        showContent("home")
+        showContent("chapters")
         $(".nav").on("click", function(ev){
           ev.preventDefault()
           showContent(this.id)
