07. Using Markdown / 07_04-Rendering

--- a/02. Layout and Fonts/vidpub/index.html
+++ b/02. Layout and Fonts/vidpub/index.html
@@ -4,72 +4,44 @@
     <meta charset="UTF-8">
     <title>Vidpub</title>
     <link rel="stylesheet" href="./css/app.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script> var $ = jQuery = require("jquery")</script>
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <script>var $ = jQuery = require("jquery");</script>
   </head>
-  <style>
-    #side-nav {
-      background-color: #000;
-      padding-top: 18px;
-      height: 100%;
-      width:65px;
-      float:left;
-    }
-    #main {
-      float:left;
-      margin-left: 20px;
-      min-width: 500px
-    }
-    #side-nav ul {
-      list-style: none;
-      padding: 20px;
-      margin: 0;
-    }
-    #side-nav li {
-      padding-bottom: 8px;
-    }
-    #wrapper {
-      height: 100%;
-      min-width: 800px;
-    }
 
-  </style>
-<body>
-  <div id="wrapper">
+  <body>
+    <div id="wrapper">
       <div id="side-nav">
-        <ul style="list-style:none">
+        <ul>
           <li><a href="#" id="home" class="nav"><i class="fa fa-home"></i></a></li>
           <li><a href="#" id="chapters" class="nav"><i class="fa fa-list"></i></a></li>
           <li><a href="#" id="search" class="nav"><i class="fa fa-search"></i></a></li>
+        </ul>
+      </div>
+      <div id="top-bar">
+        <ul>
           <li><a href="#"><i class="fa fa-user"></i></a></li>
         </ul>
       </div>
-
       <div id="main">
 
       </div>
-  </div>
-</body>
+    </div>
+  </body>
 
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-  </script>
-
-  <script>
-    var app = require("./lib/app")
-    app.on("rendered", function(rendered){
-      $("#main").html(rendered)
-    })
-    var showContent = function(view){
-      app.emit("view-selected", view)
-    }
-    $(function(){
-        showContent("chapters")
-        $(".nav").on("click", function(ev){
-          ev.preventDefault()
-          showContent(this.id)
-        })
-      })
-  </script>
+<script>
+  var app = require("./lib/app");
+  app.on("rendered", function(rendered){
+    $("#main").html(rendered);
+  });
+  var showContent = function(view){
+    app.emit("view-selected", view);
+  }
+  $(function(){
+    showContent("chapters");
+    $(".nav").on("click", function(ev){
+      ev.preventDefault();
+      showContent(this.id);
+    });
+  });
+</script>
 </html>
