--- a/02. Layout and Fonts/vidpub/index.html
+++ b/02. Layout and Fonts/vidpub/index.html
@@ -61,6 +61,9 @@
         }
       });
     });
+
+// 10. Handling External Links
+
     $("#main a").not(".internal").on("click", function(ev){
       ev.preventDefault();
       var url = $(this).attr("href");
